# scooper-v2

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  scooper.mainnet.toml  scooper.toml  shell.nix
.cargo/: audit.toml
.github/workflows/: audit.yml  test.yml
config/: acropolis.toml
config/protocols/: mainnet.json  preview.json
db/migrations/sqlite/: 00000001_init.down.sql  00000001_init.up.sql  00000002_data.down.sql  00000002_data.up.sql
src/: acropolis.rs  bigint.rs  cardano_types.rs  config.rs  configuration.rs  datum_lookup.rs  historical_state.rs  main.rs  multisig.rs  persistence.rs  scooper.rs  serde_compat.rs  sundaev3.rs
src/persistence/: sqlite.rs
src/sundaev3/: builder.rs  indexer.rs  pool.rs  types.rs  utils.rs  validation.rs
testdata/: metadata.block  protocol  scoop-pool.block
