[package]
name = "scooper-v2"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/rrruko/scooper-v2"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4.5.41", features = ["derive"] }
hex = "0.4.3"
minicbor = { version = "0.26.0", features = ["alloc", "derive"] }
num-bigint = "0.4.6"
pallas-addresses = "1.0.0-alpha.2"
pallas-codec = "1.0.0-alpha.2"
pallas-crypto = "1.0.0-alpha.2"
pallas-network = "1.0.0-alpha.2"
pallas-primitives = "1.0.0-alpha.2"
pallas-traverse = "1.0.0-alpha.2"
tokio = { version = "1.46.1", features = ["full"] }
plutus-parser = { version = "0.2.0", default-features = false, features = ["pallas-v1", "derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "std",
  "json",
] }

hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
