[package]
name = "scooper-v2"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/rrruko/scooper-v2"

[dependencies]
acropolis-common = { git = "https://github.com/input-output-hk/acropolis", package = "acropolis_common" }
acropolis_module_block_unpacker = { git = "https://github.com/input-output-hk/acropolis", package = "acropolis_module_block_unpacker" }
acropolis_module_custom_indexer = { git = "https://github.com/input-output-hk/acropolis", package = "acropolis_module_custom_indexer" }
acropolis_module_genesis_bootstrapper = { git = "https://github.com/input-output-hk/acropolis", package = "acropolis_module_genesis_bootstrapper" }
acropolis_module_peer_network_interface = { git = "https://github.com/input-output-hk/acropolis", package = "acropolis_module_peer_network_interface" }
anyhow = "1"
async-trait = "0.1"
caryatid_sdk = "0.14.0"
caryatid_process = "0.13.1"
clap = { version = "4.5.41", features = ["derive"] }
config = "0.15.11"
hex = "0.4.3"
minicbor = { version = "0.26.0", features = ["alloc", "derive"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
pallas-addresses = "1.0.0-alpha.2"
pallas-codec = "1.0.0-alpha.2"
pallas-primitives = "1.0.0-alpha.2"
pallas-traverse = "1.0.0-alpha.2"
tokio = { version = "1.46.1", features = ["full"] }
plutus-parser = { version = "0.2.0", default-features = false, features = ["pallas-v1", "derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "std",
  "json",
] }

hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
